pod-security-vpol/baseline/disallow-host-probes/.chainsaw-test/pod-bad.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: 169.254.169.254
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
    livenessProbe:
      tcpSocket:
        port: 8080
        host: 10.0.0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
    readinessProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: example.com
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    readinessProbe:
      tcpSocket:
        port: 8080
        host: 169.254.169.254
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
    startupProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: 10.0.0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    startupProbe:
      tcpSocket:
        port: 8080
        host: example.com
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
    lifecycle:
      postStart:
        httpGet:
          path: /healthz
          port: 8080
          host: 169.254.169.254
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
    lifecycle:
      postStart:
        tcpSocket:
          port: 8080
          host: 10.0.0.1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
    lifecycle:
      preStop:
        httpGet:
          path: /healthz
          port: 8080
          host: example.com
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
    lifecycle:
      preStop:
        tcpSocket:
          port: 8080
          host: 169.254.169.254
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: 10.0.0.1
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod12
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    livenessProbe:
      tcpSocket:
        port: 8080
        host: example.com
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod13
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    readinessProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: 169.254.169.254
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod14
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    readinessProbe:
      tcpSocket:
        port: 8080
        host: 10.0.0.1
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod15
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    startupProbe:
      httpGet:
        path: /healthz
        port: 8080
        host: example.com
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod16
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    startupProbe:
      tcpSocket:
        port: 8080
        host: 169.254.169.254
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod17
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    lifecycle:
      postStart:
        httpGet:
          path: /healthz
          port: 8080
          host: 10.0.0.1
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod18
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    lifecycle:
      postStart:
        tcpSocket:
          port: 8080
          host: example.com
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod19
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    lifecycle:
      preStop:
        httpGet:
          path: /healthz
          port: 8080
          host: 169.254.169.254
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod20
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    restartPolicy: Always
    lifecycle:
      preStop:
        tcpSocket:
          port: 8080
          host: 10.0.0.1
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod21
spec:
  containers:
  - name: container01
    image: dummyimagename
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
  - name: container02
    image: dummyimagename
    readinessProbe:
      tcpSocket:
        port: 8080
        host: 10.0.0.1
