pod-security-vpol/baseline/disallow-host-probes/.chainsaw-test/podcontroller-bad.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            host: 169.254.169.254
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
        lifecycle:
          postStart:
            tcpSocket:
              port: 8080
              host: 10.0.0.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: dummyimagename
        restartPolicy: Always
        lifecycle:
          preStop:
            tcpSocket:
              port: 8080
              host: 10.0.0.1
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
            livenessProbe:
              httpGet:
                path: /healthz
                port: 8080
                host: 169.254.169.254
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
            lifecycle:
              postStart:
                tcpSocket:
                  port: 8080
                  host: 10.0.0.1
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: dummyimagename
            restartPolicy: Always
            lifecycle:
              preStop:
                tcpSocket:
                  port: 8080
                  host: 10.0.0.1
          containers:
          - name: container01
            image: dummyimagename
